--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -296,5 +296,14 @@
   .width100 {
     width: 100%;
   }
+  .avatarHover{
+    transition: all .2s ease-in-out;
+  }
+  .avatarHover:hover{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.38) 0px 10px 10px -5px;  
+    transform: scale(1.3);
+  }
+  .stageImg{
+  }
 }
 
