--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -303,7 +303,17 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.38) 0px 10px 10px -5px;  
     transform: scale(1.3);
   }
-  .stageImg{
+  .btnPrimary{
+    background-color: #0b7e8b;
+    color: white;
+    text-align: center;
+    width: 100%;
+    border-radius: 1em;
+    border: #0b7e8b;
+  }
+  .btnPrimary:hover{
+    background-color: #0194a4;
+    color: white !important;
   }
 }
 
