feat: change colors of client

--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -279,6 +279,10 @@
     border-radius: 2em;
   }
   .backgroundDrawer{
+    background-color: #014154 !important;
+  }
+
+  .backgroundDrawerModal{
     background-color: #fff7ed !important;
   }
   .backgroundDrawerNigth{
